Sugati/src/objects/Contract_Translation__c.object
<CustomObject>
    <fields>
        <fullName>CT_Contract_Language__c</fullName>
        <label>Contract Language</label>
        <referenceTo>Contract_Language__c</referenceTo>
        <relationshipLabel>Contract Translations</relationshipLabel>
        <relationshipName>Contract_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CT_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CT_Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CT_Title__c</fullName>
        <inlineHelpText>This is to be used by the system.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Translation</label>
    <nameField>
        <displayFormat>CT-{0000000000}</displayFormat>
        <label>Contract Translation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Translations</pluralLabel>
    <recordTypes>
        <fullName>Main</fullName>
        <active>true</active>
        <description>Main Section</description>
        <label>Main</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ts_Cs</fullName>
        <active>true</active>
        <description>Terms and Conditions Pages</description>
        <label>Ts &amp; Cs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>